--- a/src/css/dictation.css
+++ b/src/css/dictation.css
@@ -1,13 +1,15 @@
-html, body, #root{
-    height: 100%;
+html,
+body,
+#root {
+  height: 100%;
 }
 
 body {
   background: #1e2440;
   color: #f2efe2;
   font-size: 16px;
-  font-family: 'Kaushan Script', cursive;
-  font-family: 'Shadows Into Light', cursive;
+  font-family: "Kaushan Script", cursive;
+  font-family: "Shadows Into Light", cursive;
 }
 .container {
   height: 100vh;
@@ -26,7 +28,7 @@ body {
   height: 90%;
 }
 .text-box {
-  height:100%;
+  height: 100%;
   overflow: scroll;
 }
 .text-box:focus {
@@ -39,9 +41,11 @@ body {
   margin: 0px !important;
   background-color: lightblue;
 }
+
 .fa {
   color: white;
   background: #1e2440;
+
   border-radius: 50%;
   cursor: pointer;
   /* margin-top: 1rem; */
@@ -51,6 +55,9 @@ body {
   display: flex !important;
   align-items: center;
   justify-content: center;
+}
+.recording {
+  background: red;
 }
 /* @media (max-width: 768px) {
   .container {
